@@ -19,7 +19,7 @@ struct breakpoint {
 	// How many times this breakpoint has hit.
 	int hit_count;
 
-	// Whether or not this breakpoint is disabled.
+	// Whether or not this breakpjoint is disabled.
 	int disabled;
 
 	// Whether or not this breakpoint deletes itself after hitting.
@@ -30,6 +30,9 @@ struct breakpoint {
 
 	// If this is a hardware breakpoint, what breakpoint register it corresponds to.
 	int hw_bp_reg;
+
+	/* If this breakpoint is used for single stepping. */
+	int ss;
 };
 
 #define BT (0 << 20)
@@ -45,15 +48,18 @@ typedef int bp_error_t;
 #define BP_NO_TEMP 0
 #define BP_TEMP 1
 
+#define BP_NO_SS 0
+#define BP_SS 1
+
 #define BP_ENABLED 0
 #define BP_DISABLED 1
 
 static int current_breakpoint_id = 1;
 
-// BRK #0
+/* BRK #0 */
 static const unsigned long long BRK = 0x000020D4;
 
-bp_error_t breakpoint_at_address(unsigned long, int);
+bp_error_t breakpoint_at_address(unsigned long, int, int);
 void breakpoint_hit(struct breakpoint *);
 bp_error_t breakpoint_delete(int);
 bp_error_t breakpoint_disable(int);
