@@ -34,6 +34,7 @@ cmd_error_t cmdfunc_quit(const char *, int);
 cmd_error_t cmdfunc_regsfloat(const char *, int);
 cmd_error_t cmdfunc_regsgen(const char *, int);
 cmd_error_t cmdfunc_set(const char *, int);
+cmd_error_t cmdfunc_stepi(const char *, int);
 cmd_error_t cmdfunc_threadlist(const char *, int);
 cmd_error_t cmdfunc_threadselect(const char *, int);
 cmd_error_t cmdfunc_watch(const char *, int);
@@ -57,6 +58,7 @@ static struct dbg_cmd_t COMMANDS[] = {
 	{ "regs float", NULL, cmdfunc_regsfloat, "Show a floating point register." },
 	{ "regs gen", NULL, cmdfunc_regsgen, "Show one or all general purpose registers." },
 	{ "set", NULL, cmdfunc_set, "Set the value of memory or a configuration variable for the debugger. Syntax:\n\tset (*offset|variable)=value\n\n\tYou must prefix an offset with '*'.\n\n\tIf you want your value to be intepreted as hex, use '0x'.\n\n\tPass --no-aslr to prevent ASLR from being added." },
+	{ "stepi", NULL, cmdfunc_stepi, "Step into the next instruction." },
 	{ "thread", NULL, NULL, NULL },
 	{ "thread list", NULL, cmdfunc_threadlist, "List threads from the debuggee." },
 	{ "thread select", NULL, cmdfunc_threadselect, "Select a thread to focus on." },
