@@ -1,3 +1,6 @@
+1-15-19
+- single stepping
+
 1-14-19
 - implement mach notifications correctly to check when debuggee dies
 - deallocate debuggee->exception_port upon detach
